--- a/App/templates/layout.html
+++ b/App/templates/layout.html
@@ -2,12 +2,12 @@
 <html>
   <head>
   
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
      <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Compiled and minified CSS -->
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"> -->
-    <!-- Let browser know website is optimized for mobile -->
+    <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>{% block title %}{% endblock %}</title>
     <!-- <script src="C:\Users\josia\OneDrive\Desktop\INFO 2602\CEEJ INFO Project\INFO2602-Project\App\static\main.js"></script> -->
@@ -16,7 +16,7 @@
   <body>
     <nav>
       <div class="logo">
-        <img src="../static/images/CEEJ_Final_Logo_white.png" alt="Logo">
+        <img src="../images/CEEJ_Final_Logo_white.png" alt="Logo">
       </div>
     </nav>
     <div class="container" id="content">{% block content %}{% endblock %}</div> 
