--- a/App/templates/loginPage.html
+++ b/App/templates/loginPage.html
@@ -12,21 +12,20 @@
     </div>
     <div class="login-right">
       <!-- Add the "action" and "method" attributes to the form tag -->
-      <form action="competitionsPage.html" method="POST">
+      <form action="{{ url_for('auth_views.login_action') }}" method="POST">
         <label for="username">Username:</label>
-        <input type="text" id="username" name="username" placeholder="Enter your username">
-
+        <input type="text" id="username" name="username" placeholder="Enter your username" required>
+      
         <label for="password">Password:</label>
-        <input type="password" id="password-field" placeholder="Enter your password">
-
-        <!-- Change the input type to "submit" -->
+        <input type="password" id="password" name="password" placeholder="Enter your password" required>
+      
         <input type="submit" value="Login">
-
+      
         <div class="login_signup_button">
           <div class="text">Don't have an account?</div>
-          <a href="{{ url_for('signUp') }}">SignUp</a>
+          <a href="{{ url_for('auth_views.signUp') }}">SignUp</a>
         </div>
-      </form>
+      </form>      
     </div>
   </div>
 {% endblock %}
