--- a/App/templates/signUpPage.html
+++ b/App/templates/signUpPage.html
@@ -11,29 +11,24 @@
 			<img src="../static/images/signuppexels-sora-shimazaki-5935794.jpg" alt="SignUp Image">
 		</div>
 		<div class="login-right">
-<!-- 			<h1>Login</h1> -->
-			<form>
-				<label for="email">Email:</label>
-				<input type="text" id="email" name="email" placeholder="Enter your email">
+			<form action="{{ url_for('auth_views.signUp_action') }}" method="POST">
         
 				<label for="username">Username:</label>
-				<input type="text" id="username" name="username" placeholder="Enter your username">
+				<input type="text" id="username" name="username" placeholder="Enter your username" required>
 
 				<label for="password">Password:</label>
-        <input type="password" id="password-field" placeholder="Enter your password">
+                <input type="password" id="password-field" name="password" placeholder="Enter your password">
 
-        <label for="confirm_password">Confirm Password:</label>
-        <input type="password" id="password-field" placeholder="Confirm your password">
+                <label for="confirm_password">Confirm Password:</label>
+                <input type="password" id="password-field" name="confirmPassword" placeholder="Confirm your password">
 
 
 				<input type="submit" value="SignUp">
-        <div class="login_signup_button">
-          
-        <div class="text">Already an account?</div>
-        <a href="{{ url_for('login') }}">Login</a>
-        </div>
+                    <div class="login_signup_button">
+                        <div class="text">Already an account?</div>
+                        <a href="{{ url_for('auth_views.render_login') }}">Login</a>
+                    </div>
 			</form>
-      
 		</div>
 	</div>
 {% endblock %}
