--- a/App/templates/index.html
+++ b/App/templates/index.html
@@ -20,6 +20,6 @@
     </div>
     <!-- this is the signup button-->
       <div class="signup_button">
-        <a href="{{ url_for('auth_views.signUp') }}">SignUp</a>
+        <a href="{{ url_for('auth_views.render_signUp') }}">SignUp</a>
       </div>
 {% endblock %}
