--- a/App/templates/signUpPage.html
+++ b/App/templates/signUpPage.html
@@ -22,6 +22,15 @@
                 <label for="confirm_password">Confirm Password:</label>
                 <input type="password" id="password-field" name="confirmPassword" placeholder="Confirm your password">
 
+                {% with messages = get_flashed_messages() %}
+                    {% if messages %}
+                        <ul class="flashes">
+                        {% for message in messages %}
+                            <li>{{ message }}</li>
+                        {% endfor %}
+                        </ul>
+                    {% endif %}
+                {% endwith %}
 
 				<input type="submit" value="SignUp">
                     <div class="login_signup_button">
