Update auth, user, styles, templates & Add images

--- a/App/templates/index.html
+++ b/App/templates/index.html
@@ -8,6 +8,7 @@
 
 {% block content %}
     <div class="center">
+      <h1>Welcome to CEEJ Competitions page</h1>
 			<img src="../static/images/CEEJ Landing Page gif.gif" alt="Landing Image">
 		</div>
     <!-- this is the login button-->
