--- a/App/static/style.css
+++ b/App/static/style.css
@@ -34,7 +34,7 @@
   
   body {
     margin-top: 10vh;
-    background-image: url("../../images/backgroundpexels-tima-miroshnichenko-6474345.jpg");
+    background-image: url("../static/images/backgroundpexels-tima-miroshnichenko-6474345.jpg");
     background-size: cover;
     background-color: #595959;
     color: white;
@@ -193,7 +193,9 @@
   h1 {
       text-align: center;
       font-size: 28px;
+      padding-top: 5vh;
       margin-bottom: 30px;
+      font-family: Arial;
   }
   
   form {
