--- a/App/templates/adminPage.html
+++ b/App/templates/adminPage.html
@@ -10,20 +10,18 @@
     <span>Competitions (Admin)</span>
   </div>
   <div class="filter-container">
-    <button class="filter-buttons1">Filter 1</button>
-    <button class="filter-buttons2">Filter 2</button>
-    <a class="add-button" href="createCompetitionPage.html"> Add Competition</a>
+    <button class="filter-buttons1">Alphabetical</button>
+    <button class="filter-buttons2">Date</button>
   </div> 
   <div>
       <input type="text" class="search-bar" placeholder="Search">
-<!--       <button class="search-button">Search</button> -->
+      <button class="searchButton">Search</button>
   </div>
   <div class="sidebar">
     <!-- Add your sidebar content here -->
     <ul>
-      <!-- Use Jinja for username here -->
-      <li class="usernameSidebar"><a href="adminPage">{{ username }}</a></li>
-      <li class="logoutSidebar"><a action="{{ url_for('auth_views.logout_action') }}">Logout</a></li>
+      <li class="usernameSidebar"><a href="{{ url_for('auth_views.render_adminPage') }}">Home</a></li> 
+      <li class="logoutSidebar"><a href="{{ url_for('auth_views.logout_action') }}">Logout</a></li>
     </ul>
   </div>
   <div class="content" id="card-container">
