--- a/App/templates/adminPage.html
+++ b/App/templates/adminPage.html
@@ -12,6 +12,7 @@
   <div class="filter-container">
     <button class="filter-buttons1">Alphabetical</button>
     <button class="filter-buttons2">Date</button>
+    <a class="filter-buttons2" href="{{ url_for('auth_views.render_createCompetitionsPage') }}">Add Competition</a>
   </div> 
   <div>
       <input type="text" class="search-bar" placeholder="Search">
@@ -30,10 +31,10 @@
       <a href="teamViewPage.html" class="card"> <!-- add the link to the "teamViewPage.html" page -->
         <div class="card-text">
           <div class="card-left">
-            <h3>{{c.compName}}</h3>
-            <p>{{c.id}}</p>
-            <p>{{c.startDate}}</p>
-            <p>{{c.endDate}}</p>
+            <h3>Competition Code: {{c.compName}}</h3>
+            <p>Competition ID: {{c.id}}</p>
+            <p>Competition Start Date: {{c.startDate}}</p>
+            <p>Competition End Date: {{c.endDate}}</p>
           </div>
           <div class="card-right">
             <button class="competition-buttons1">Update Competition</button>
