--- a/App/templates/adminPage.html
+++ b/App/templates/adminPage.html
@@ -27,21 +27,22 @@
   </div>
   <div class="content" id="card-container">
     <!-- Cards will be dynamically appended here -->
-    {%for c in competitions%}
-      <a href="teamViewPage.html" class="card"> <!-- add the link to the "teamViewPage.html" page -->
-        <div class="card-text">
-          <div class="card-left">
-            <h3>Competition Code: {{c.compName}}</h3>
-            <p>Competition ID: {{c.id}}</p>
-            <p>Competition Start Date: {{c.startDate}}</p>
-            <p>Competition End Date: {{c.endDate}}</p>
-          </div>
-          <div class="card-right">
-            <button class="competition-buttons1">Update Competition</button>
-            <button class="competition-buttons2">Delete Competition</button>
-          </div>
+    {% for c in competitions %}
+    <a href="teamViewPage/{{ c.id }}" class="card">
+      <div class="card-text">
+        <div class="card-left">
+          <h3>Competition Code: {{ c.compName }}</h3>
+          <p>Competition ID: {{ c.id }}</p>
+          <p>Competition Start Date: {{ c.startDate }}</p>
+          <p>Competition End Date: {{ c.endDate }}</p>
         </div>
-      </a>
-    {%endfor%}
+        <div class="card-right">
+          <button class="competition-buttons1">Update Competition</button>
+          <button class="competition-buttons2" type="submit">Delete Competition</button>
+        </div>
+      </div>
+    </a>
+  {% endfor %}
+  
   </div>
 {% endblock %}
