Fix team view table

--- a/App/templates/participantViewPage.html
+++ b/App/templates/participantViewPage.html
@@ -22,7 +22,7 @@
     <!-- Add your sidebar content here -->
     <ul>
       <!-- Use Jinja for username here -->
-      <li class="usernameSidebar"><a href="">{{username}}</a></li> 
+      <li class="usernameSidebar"><a href="">username</a></li> 
       <li class="logoutSidebar"><a action="{{ url_for('auth_views.logout_action') }}">Logout</a></li>
     </ul>
   </div>
