--- a/App/templates/adminPage.html
+++ b/App/templates/adminPage.html
@@ -28,7 +28,7 @@
   <div class="content" id="card-container">
     <!-- Cards will be dynamically appended here -->
     {% for c in competitions %}
-    <a href="teamViewPage/{{ c.id }}" class="card">
+    <a href="/teamViewPage/{{ c.id }}" class="card">
       <div class="card-text">
         <div class="card-left">
           <h3>Competition Code: {{ c.compName }}</h3>
