--- a/App/templates/teamViewPage.html
+++ b/App/templates/teamViewPage.html
@@ -36,8 +36,7 @@
       <tbody>
       {%for t in teams%}
         <tr>
-          
-            <td><a class = "viewTeamButton"href="participantViewPage.html">{{t.teamName}}</a></td>
+            <td><a class = "viewTeamButton"href="/participantViewPage/{{ t.id }}">{{t.teamName}}</a></td>
             <td>{{t.score}}</td>
         </tr>
       {%endfor%}
