--- a/App/templates/competitionsPage.html
+++ b/App/templates/competitionsPage.html
@@ -18,25 +18,27 @@
       <button class="searchButton">Search</button>
   </div>
   <div class="sidebar">
-    <!-- Add your sidebar content here -->
-    <ul>
-      <!-- Use Jinja for username here -->
-      <li class="usernameSidebar"><a href="{{ url_for('auth_views.render_competitionsPage') }}">Home</a></li> 
-      <li class="logoutSidebar"><a href="{{ url_for('auth_views.logout_action') }}">Logout</a></li>
-    </ul>
+        <!-- Add your sidebar content here -->
+        <ul>
+          <li class="usernameSidebar"><a href="{{ url_for('auth_views.render_competitionsPage') }}">Home</a></li>
+          <li class="logoutSidebar"><a href="{{ url_for('auth_views.logout_action') }}">Logout</a></li>
+        </ul>
   </div>
   <div class="content" id="card-container">
     <!-- Cards will be dynamically appended here -->
-    {%for c in competitions%}
-      <a href="teamViewPage.html" class="card"> <!-- add the link to the "teamViewPage.html" page -->
-        <div class="card-text">
-          <h3>Competition Code: {{c.compName}}</h3>
-          <p>Competition ID: {{c.id}}</p>
-          <p>Competition Start Date: {{c.startDate}}</p>
-          <p>Competition End Date: {{c.endDate}}</p>
+    {% for c in competitions %}
+    <a href="/teamViewPage/{{ c.id }}" class="card">
+      <div class="card-text">
+        <div class="card-left">
+          <h3>Competition Code: {{ c.compName }}</h3>
+          <p>Competition ID: {{ c.id }}</p>
+          <p>Competition Start Date: {{ c.startDate }}</p>
+          <p>Competition End Date: {{ c.endDate }}</p>
         </div>
-      </a>
-    {%endfor%}
+        <div class="card-right"></div>
+      </div>
+    </a>
+  {% endfor %}
   </div>
     
 {% endblock %}
