--- a/App/templates/adminPage.html
+++ b/App/templates/adminPage.html
@@ -10,8 +10,8 @@
     <span>Competitions (Admin)</span>
   </div>
   <div class="filter-container">
-    <button class="filter-buttons1">Alphabetical</button>
-    <button class="filter-buttons2">Date</button>
+    <a class="filter-buttons1" href="/sort_competitions_by_name_action_admin">Alphabetical</a>
+    <a class="filter-buttons2" href ="/sort_competitions_by_date_action_admin">Date</a>
     <a class="filter-buttons2" href="{{ url_for('auth_views.render_createCompetitionsPage') }}">Add Competition</a>
   </div> 
   <div>
