--- a/App/templates/teamViewPage.html
+++ b/App/templates/teamViewPage.html
@@ -9,8 +9,8 @@
     <span>Teams</span>
   </div>
   <div class="filter-container">
-    <button class="filter-buttons1">Filter 1</button>
-    <button class="filter-buttons2">Filter 2</button>
+    <button class="filter-buttons1">Alphabetical</button>
+    <button class="filter-buttons2">Score</button>
   </div> 
   <div>
       <input type="text" class="search-bar" placeholder="Search">
