--- a/App/templates/competitionsPage.html
+++ b/App/templates/competitionsPage.html
@@ -10,8 +10,8 @@
     <span>Competitions</span>
   </div>
   <div class="filter-container">
-    <button class="filter-buttons1">Alphabetical</button>
-    <button class="filter-buttons2">Date</button>
+    <a class="filter-buttons1" href="/sort_competitions_by_name_action">Alphabetical</a>
+    <a class="filter-buttons2" href ="/sort_competitions_by_date_action">Date</a>
   </div>  
   <div>
       <input type="text" class="search-bar" placeholder="Search">
