--- a/App/templates/participantViewPage.html
+++ b/App/templates/participantViewPage.html
@@ -22,7 +22,7 @@
     <table>
       <thead>
         <tr>
-          <th>Player Name</th>
+          <th>Team members</th>
         </tr>
       </thead>
       <tbody>
