Readd delete button

--- a/App/templates/adminPage.html
+++ b/App/templates/adminPage.html
@@ -37,7 +37,7 @@
           <p>Competition End Date: {{ c.endDate }}</p>
         </div>
         <div class="card-right">
-          <!-- <button class="competition-buttons1">Update Competition</button> -->
+          <button class="competition-buttons1">Update Competition</button>
           <button class="competition-buttons1" type="submit">Delete Competition</button>
         </div>
       </div>
