--- a/App/templates/adminPage.html
+++ b/App/templates/adminPage.html
@@ -37,7 +37,7 @@
           <p>Competition End Date: {{ c.endDate }}</p>
         </div>
         <div class="card-right">
-          <button class="competition-buttons1">Update Competition</button>
+          <a class="competition-buttons1" type="submit" href="/update_competition/{{c.id}}">Update Competition</a>
           <a class="competition-buttons2" type="submit" href="/delete_competition/{{c.id}}">Delete Competition</a>
         </div>
       </div>
