--- a/App/templates/teamViewPage.html
+++ b/App/templates/teamViewPage.html
@@ -10,6 +10,7 @@
   </div>
   <div class="filter-container">
     <a class="filter-buttons1" href="/sort_teams_by_name_action">Alphabetical</a>
+    <a class="filter-buttons2" href="/sort_teams_by_score_action">Score</a>
   </div> 
   <div class="sidebar">
         <!-- Add your sidebar content here -->
